# optimize-gemm

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  gemm_numpy.py
assets/: timing.py
include/: matrix.hpp  simd_wrapper.h
src/: gemm_final.cpp  gemm_loopreorder.cpp  gemm_multithreads.cpp  gemm_naive.cpp  gemm_simd.cpp  gemm_tiling.cpp  gemm_unrolling.cpp
